[package]
name = "plume_utils"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zip.workspace = true
idevice.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
tokio.workspace = true
futures.workspace = true
plume_core = { path = "../core" }
